# write-ahead-log-recovery

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/write_ahead_log_recovery/: __init__.py  __main__.py  models.py  pipeline.py  protocols.py
tests/: test_cli.py  test_property_invariants.py  test_recovery.py  test_serialization.py  test_write_ahead_log.py
