[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "write-ahead-log-recovery"
version = "0.1.0"
description = "Binary write-ahead log with checkpointing and redo/undo crash recovery for pluggable storage engines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Juan Martos Cuevas", email = "martoscuevasjuan@gmail.com" }]

[project.urls]
Repository = "https://github.com/juanmmm21/write-ahead-log-recovery"

[project.scripts]
write-ahead-log-recovery = "write_ahead_log_recovery.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.10", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/write_ahead_log_recovery"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]
